# fused-effects-parser

./: .ghci.fused-effects-parser  .ghci.repl  README.md  cabal.project  fused-effects-parser.cabal  hie.yaml
script/: ghci-flags  ghci-flags-dependencies  repl
src/Control/Carrier/Parser/: Church.hs
src/Control/Effect/: Parser.hs
src/Control/Effect/Parser/: Excerpt.hs  GHCI.hs  Lens.hs  Lines.hs  Notice.hs  Path.hs  Source.hs  Span.hs
test/: Test.hs
