cabal-version:       2.2

name:                fused-effects-parser
version:             0.0.0.0
synopsis:            Parsing w/ fused-effects inspired by trifecta
description:         Parser combinators integrating w/ fused-effects, inspired by trifecta
homepage:            https://github.com/fused-effects/fused-effects-parser
bug-reports:         https://github.com/fused-effects/fused-effects-parser/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2019 Rob Rix
category:            Language
extra-source-files:
  CHANGELOG.md

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base ^>= 4.12

test-suite fused-effects-parser-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base ^>= 4.12
