cabal-version:       2.2

name:                fused-effects-parser
version:             0.0.0.0
synopsis:            Parsing w/ fused-effects inspired by trifecta
description:         Parser combinators integrating w/ fused-effects, inspired by trifecta
homepage:            https://github.com/fused-effects/fused-effects-parser
bug-reports:         https://github.com/fused-effects/fused-effects-parser/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2019 Rob Rix
category:            Language
extra-source-files:
  CHANGELOG.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import: common
  hs-source-dirs:      src
  exposed-modules:
    Control.Carrier.Parser.Church
    Control.Effect.Parser
    Control.Effect.Parser.Excerpt
    Control.Effect.Parser.Lines
    Control.Effect.Parser.Notice
    Control.Effect.Parser.Path
  other-modules:
    Control.Effect.Parser.Lens
  build-depends:
    , base >= 4.12 && < 5
    , containers >= 0.5 && < 0.7
    , fused-effects ^>= 1
    , parsers ^>= 0.12
    , prettyprinter ^>= 1.5
    , prettyprinter-ansi-terminal ^>= 1.1
    , semantic-source ^>= 0
    , transformers >= 0.4 && < 0.6

test-suite test
  import: common
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:
    , base
    , containers
    , fused-effects
    , fused-effects-parser
    , parsers
    , prettyprinter
    , semantic-source
    , tasty ^>= 1.2
    , tasty-hunit ^>= 0.10
